--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -11,7 +11,9 @@ $backgroundColor: #000000;
     box-shadow: 3px 2px 5px #aaaaaabf;
     padding: 2em 4em;
     box-sizing: border-box;
+    max-height: max-content;
     min-height: 26.7em;
+    
   }
 
   .results div{
